# job-demand-analytics

./: .gitignore  README.md  TODO.md  appt.py  bq_upload.py  init_db.py  main.py  pyproject.toml  requirements.txt  setup_db.sql  sqapp.py  test_import.txt  test_run.txt
static/: style.css
templates/: dashboard.html  home.html  upload.html
